apps/plattform/oauth2-proxy-ingress.yaml
apiVersion: networking.internal.knative.dev/v1alpha1
kind: Ingress
metadata:
  name: plattform-proxy
  namespace: default
  annotations:
    networking.knative.dev/ingress.class: kourier.ingress.networking.knative.dev
spec:
  rules:
    - hosts:
        - plattform.default.192.168.1.249.sslip.io
      visibility: ExternalIP
      http:
        paths:
          - splits:
              - serviceName: oauth2-proxy
                serviceNamespace: default
                servicePort: 4180
                percent: 100
  tls:
    - hosts:
        - plattform.default.192.168.1.249.sslip.io
      secretName: plattform-tls-secret
      secretNamespace: default
